Cherry-pick 261183@main (bbd423cf2e6f). https://bugs.webkit.org/show_bug.cgi?id=253339

Fix warning introduced in 261124@main
    https://bugs.webkit.org/show_bug.cgi?id=253339

    Unreviewed build fix.

    The change removed references to `defaultRefreshRate` causing a warning
    which breaks developer builds on PlayStation.

    The file is unified on GTK and WPE so my suspicion is that these
    warnings only appear on non-unified files.

    * Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor/ThreadedDisplayRefreshMonitor.cpp:

    Canonical link: https://commits.webkit.org/261183@main